@@ -15,6 +15,11 @@
  */
 package com.netflix.concurrency.limits.executors;
 
+import java.util.concurrent.Executor;
+import java.util.concurrent.Executors;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.atomic.AtomicInteger;
+
 import com.netflix.concurrency.limits.Limiter;
 import com.netflix.concurrency.limits.Limiter.Listener;
 import com.netflix.concurrency.limits.MetricRegistry;
@@ -22,12 +27,6 @@ import com.netflix.concurrency.limits.internal.EmptyMetricRegistry;
 import com.netflix.concurrency.limits.limit.AIMDLimit;
 import com.netflix.concurrency.limits.limiter.BlockingLimiter;
 import com.netflix.concurrency.limits.limiter.SimpleLimiter;
-
-import java.util.concurrent.Executor;
-import java.util.concurrent.Executors;
-import java.util.concurrent.RejectedExecutionException;
-import java.util.concurrent.ThreadFactory;
-import java.util.concurrent.atomic.AtomicInteger;
 
 /**
  * {@link Executor} which uses a {@link Limiter} to determine the size of the
@@ -69,20 +68,14 @@ public final class BlockingAdaptiveExecutor implements Executor {
             return this;
         }
 
+        @SuppressWarnings("preview")
         public BlockingAdaptiveExecutor build() {
             if (name == null) {
                 name = "unnamed-" + idCounter.incrementAndGet();
             }
 
             if (executor == null) {
-                executor = Executors.newCachedThreadPool(new ThreadFactory() {
-                    @Override
-                    public Thread newThread(Runnable r) {
-                        Thread thread = new Thread(r);
-                        thread.setDaemon(true);
-                        return thread;
-                    }
-                });
+                executor = Executors.newVirtualThreadPerTaskExecutor();
             }
 
             if (limiter == null) {
@@ -108,9 +101,10 @@ public final class BlockingAdaptiveExecutor implements Executor {
         this.executor = builder.executor;
     }
 
+    @SuppressWarnings("preview")
     @Deprecated
     public BlockingAdaptiveExecutor(Limiter<Void> limiter) {
-        this(limiter, Executors.newCachedThreadPool());
+        this(limiter, Executors.newVirtualThreadPerTaskExecutor());
     }
 
     @Deprecated
