@@ -24,7 +24,8 @@ import com.netflix.concurrency.limits.limit.SettableLimit;
 public class LifoBlockingLimiterTest {
 
     private LifoBlockingLimiter<Integer> blockingLimiter;
-    private final Executor               executor = Executors.newCachedThreadPool();
+    @SuppressWarnings("preview")
+    private final Executor               executor = Executors.newVirtualThreadPerTaskExecutor();
     private SettableLimit                limit;
     private SimpleLimiter<Integer>       simpleLimiter;
 
@@ -99,13 +100,14 @@ public class LifoBlockingLimiterTest {
         assertFalse(listener.isPresent());
     }
 
+    @SuppressWarnings("preview")
     @Test
     public void unblockWhenFullBeforeTimeout() {
         // Acquire all 4 available tokens
         List<Optional<Limiter.Listener>> listeners = acquireN(blockingLimiter, 4);
 
         // Schedule one to release in 250 msec
-        Executors.newSingleThreadScheduledExecutor()
+        Executors.newSingleThreadScheduledExecutor(Thread.ofVirtual().factory())
                  .schedule(() -> listeners.get(0).get().onSuccess(), 250, TimeUnit.MILLISECONDS);
 
         // Next acquire will block for 1 second
