@@ -49,6 +49,7 @@ public class TestBinder {
         }
     }
 
+    @SuppressWarnings("preview")
     @Test
     public void bind() throws Exception {
         var context = DigestAlgorithm.DEFAULT.getOrigin();
@@ -58,7 +59,7 @@ public class TestBinder {
         var clientMember = new SigningMemberImpl(Utils.getMember(1));
 
         var builder = ServerConnectionCache.newBuilder();
-        final var exec = Executors.newFixedThreadPool(3);
+        final var exec = Executors.newVirtualThreadPerTaskExecutor();
         serverRouter = new LocalRouter(prefix, builder, exec, null);
         clientRouter = new LocalRouter(prefix, builder, exec, null);
 
