@@ -47,6 +47,7 @@ public class TestResolver {
         }
     }
 
+    @SuppressWarnings("preview")
     @Test
     public void resolver() throws Exception {
         var context = DigestAlgorithm.DEFAULT.getOrigin();
@@ -56,7 +57,7 @@ public class TestResolver {
         var clientMember = new SigningMemberImpl(Utils.getMember(1));
 
         var builder = ServerConnectionCache.newBuilder();
-        final var exec = Executors.newFixedThreadPool(3);
+        final var exec = Executors.newVirtualThreadPerTaskExecutor();
         serverRouter = new LocalRouter(prefix, builder, exec, null);
         clientRouter = new LocalRouter(prefix, builder, exec, null);
 
